--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -39,6 +39,7 @@
         [style.height.%]="canvasSize().height"
       >
         @for (table of tablesToDisplay(); track table.id) {
+          @let unacknowledgedCount = getUnacknowledgedCriticalItemsCount(table.number);
           <div 
             (click)="selectTable(table)"
             (mousedown)="startDrag($event, table, 'move')"
@@ -55,6 +56,12 @@
             [style.height.%]="table.height"
             [ngClass]="getTableStatusClass(table.status)">
             
+            @if (unacknowledgedCount > 0 && !isEditMode()) {
+              <div class="absolute top-1 right-1 bg-red-600 rounded-full h-5 w-5 flex items-center justify-center text-white font-bold text-xs animate-pulse" title="{{unacknowledgedCount}} iten(s) com atenção especial pendente de ciência na cozinha.">
+                !
+              </div>
+            }
+
             <div class="flex flex-col items-center justify-center text-center flex-1">
               <span class="text-2xl leading-tight">{{ table.number }}</span>
               
